examples/test/testpolicy3885.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3885
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key23: value10
      key30: value5
      key24: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value36
      podSelector:
        matchLabels:
          key29: value40
          key31: value22
          key45: value11
